chore(SAMS-91): apply text corrections

--- a/src/modules/04.md
+++ b/src/modules/04.md
@@ -4,8 +4,8 @@ socialMediaImagePath: /assets/images/modules/04-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 4 “Nutzer:innenbefragung”
 twitterImagePath: /assets/images/modules/04-social-image-twitter.webp
-abstract: Wir sprechen in Kürze über die Hemmungen und die fehlenden Rahmenbedingungen zur Durchführung von Nutzer:innenbefragung - und den Ertrag, den sie erbringen können.
-example: "Während eines Service Design Prozesses mit dem zahnärztlichen Dienst Berlin Neukölln wurden die Schüler:innen, die diese Dienstleistung durchlaufen haben, zu ihrer Erfahrung befragt. Mit Hilfe von Bildmaterial gaben sie in ihren Worten einzelne Aktionen im Service wieder. Als O-Töne wurden dies wiederum den Mitarbeiter:innen des Zahnärztlichen Dienstes zurückgespiegelt. Dies entspricht in keiner Weise einer breit angelegten Erhebung oder quantitativen Befragung - dennoch hat es großen Effekt. Nur wenige, aber “echte”, Stimmen haben bereits eine völlig neue Perspektive auf den Service mit sich gebracht und dafür sensibilisiert, dass die eigenen Annahmen völlig falsch sein können."
+abstract: Wir sprechen in Kürze über die Hürden und die fehlenden Rahmenbedingungen zur Durchführung von Nutzer:innenbefragung - und den Ertrag, den sie erbringen können.
+example: "Während eines Service Design Prozesses mit dem zahnärztlichen Dienst Berlin Neukölln wurden die Schüler:innen, die diese Dienstleistung durchlaufen haben, zu ihrer Erfahrung befragt. Mit Hilfe von Bildmaterial gaben sie in ihren Worten einzelne Aktionen im Service wieder. Als O-Töne wurden dies wiederum den Mitarbeiter:innen des Zahnärztlichen Dienstes zurückgespiegelt. Dies entspricht in keiner Weise einer breit angelegten Erhebung oder quantitativen Befragung - dennoch hat es großen Effekt. Nur wenige, aber “echte” Stimmen haben bereits eine völlig neue Perspektive auf den Service mit sich gebracht und dafür sensibilisiert, dass die eigenen Annahmen völlig falsch sein können."
 hero_image_alt: Menschen sprechen miteinander und deuten auf Screens und Papier
 example_image_alt: Eine Zahnbürste und zwei Sprechblasen
 further_reading:
@@ -15,7 +15,7 @@ further_reading:
     link: https://www.publicservicedesign-berlin.org/
 ---
 
-Die Kontaktaufnahme zu Nutzer:innen von Verwaltungsleistungen ist ein schier unlösbares Dilemma! Entweder Mitarbeiter:innen haben nichts mit externen Nutzer:innen zu tun oder sind auf einer entfernten strategischen Ebene tätig. Diejenigen Mitarbeiter:innen, die eng mit Bürger:innen zusammenarbeiten sind schwer gebeutelt durch Kritik und den stetigen Wunsch nach Kundenorientierung. Man kann sie kaum überzeugen jetzt auch noch Feedback einzuholen. Nur - ist das nicht eigentlich in jeder größeren Organisation so? 
+Die Kontaktaufnahme zu Nutzer:innen von Verwaltungsleistungen ist ein schier unlösbares Dilemma! Entweder Mitarbeiter:innen haben nichts mit externen Nutzer:innen zu tun oder sind auf einer entfernten strategischen Ebene tätig. Diejenigen Mitarbeiter:innen, die eng mit Bürger:innen zusammenarbeiten, sind schwer gebeutelt durch Kritik und den stetigen Wunsch nach Kundenorientierung. Man kann sie kaum überzeugen, jetzt auch noch Feedback einzuholen. Nur - ist das nicht eigentlich in jeder größeren Organisation so? 
 
 Privatwirtschaftliche Unternehmen funktionieren in dieser Hinsicht nicht anders als Verwaltungen. Was sie unterscheidet ist der (meist) durch Konkurrenz ausgelöste Druck, sich mit den Bedürfnissen seine:r Kund:innen zu beschäftigen. So wird dem Thema Raum, Personal, Finanzen, die notwendige Kompetenz und die entsprechenden Rahmenbedingungen zur Verfügung gestellt. 
 
