--- a/src/modules/07.md
+++ b/src/modules/07.md
@@ -28,8 +28,8 @@ hypotheses:
 Auch wenn es seltsam klingt: Oben genannte Prämisse umfasst die Grundidee und auch den Mehrwert von Prototyping. Aber was soll das bedeuten? Ich soll meine:r Chef:in absichtlich schlechte Ideen in Knete präsentieren? 
 
 Prototyping leidet unter mehreren Vorurteilen, die wir aufklären wollen:
-Prototyping unterstützt keine unfertigen und schlechten Ansätze. Im Gegenteil: als ein zentrales Element des Agilen - also flexiblen, wendigen und schnellen - Arbeitens, zielt es darauf ab über die Idee des “Modells” eine sehr schnelle Testung und Fehlerbehebung vornehmen zu können. Ein Modell ist immer unfertig, das gehört dazu.
+Prototyping unterstützt keine unfertigen und schlechten Ansätze. Im Gegenteil: als ein zentrales Element des Agilen - also flexiblen, wendigen und schnellen - Arbeitens, zielt es darauf ab, über die Idee des “Modells” eine sehr schnelle Testung und Fehlerbehebung vornehmen zu können. Ein Modell ist immer unfertig, das gehört dazu.
 
 Prototyping ist keine Spielerei - auch wenn spielerische Methoden zur Umsetzung genutzt werden - sondern ist eine zielgerichtete Methode, die zügig und effektiv Schwachstellen eines Produkts oder Services sichtbar machen kann. Es werden dafür kreative Materialien genutzt, die unkompliziert bearbeitbar und veränderbar sind: Knete, Papier und Stift oder Lego. Dennoch handelt es sich nicht um ein Spiel, sondern ein methodisches Vorgehen.
 
-Prototyping ist für Designer:innen, aber doch nicht für Verwaltungsmitarbeiter:innen! Und: Wenn es Spaß macht, kann es nicht effektiv sein. Beide, oft zusammen gedachten Vorurteile sind falsch. Die Methode kann in jedem Bereich eingesetzt werden. Sie benötigt in einem “nicht-kreativen” Umfeld aber bestimmt etwas mehr Zeit zur Einführung und die Begleitung bei der Überwindung möglicher Hemmschwellen. Aus der Erfahrung der Weiterbildung lässt sich sagen: Die Teilnehmer:innen waren von ihrer eigenen Kreativität und Freude beim Erstellen der Prototypen überrascht, genauso wie von der Effektivität der Methode. 
+Prototyping ist für Designer:innen, aber doch nicht für Verwaltungsmitarbeiter:innen! Und: Wenn es Spaß macht, kann es nicht effektiv sein. Beide, oft zusammen gedachte Vorurteile, sind falsch. Die Methode kann in jedem Bereich eingesetzt werden. Sie benötigt in einem “nicht-kreativen” Umfeld aber bestimmt etwas mehr Zeit zur Einführung und die Begleitung bei der Überwindung möglicher Hemmschwellen. Aus der Erfahrung der Weiterbildung lässt sich sagen: Die Teilnehmer:innen waren von ihrer eigenen Kreativität und Freude beim Erstellen der Prototypen überrascht, genauso wie von der Effektivität der Methode. 
