--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -32,6 +32,6 @@ hypotheses:
     text: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen
 ---
 
-Die Entwicklung von Prozessen und Produkten - im Fall von Verwaltung sind das Formulare, Räume der Interaktion oder auch digitale Anwendungen - erfolgt konsequent aus der Perspektive von Nutzer:innen. Nur so ist gewährleistet, dass ein Angebot wirklich die Bedürfnisse, Hürden und individuellen Voraussetzungen der Zielgruppen trifft und das Angebot zu einem "Erfolg" macht. Anders als im privatwirtschaftlichen Bereich sprechen wir natürlich nicht von Gewinnmaximierung, durchaus aber von Kostenersparnis durch bessere Angebote. Mehrere Studien belegen, dass "schlechte" Services - unverständliche Formulare, fehlende Unterlagen, auch verärgerte und frustrierte Bürger:innen - personelle und materielle Ressourcen binden und damit Mehrkosten erzeugen. Auf die Nutzer:innen abgestimmte Angebote reduzieren dagegen den Stress für Mitarbeiter:innen der Verwaltung und bringen sie in die Position hilfreiche Gestalter:innen und nicht "nur" Verwalter:innen sein zu müssen.
+Die Entwicklung von Prozessen und Produkten - im Fall von Verwaltung sind das Formulare, Räume der Interaktion oder auch digitale Anwendungen - erfolgt konsequent aus der Perspektive von Nutzer:innen. Nur so ist gewährleistet, dass ein Angebot wirklich die Bedürfnisse, Hürden und individuellen Voraussetzungen der Zielgruppen trifft und das Angebot zu einem "Erfolg" macht. Anders als im privatwirtschaftlichen Bereich sprechen wir natürlich nicht von Gewinnmaximierung, durchaus aber von Kostenersparnis durch bessere Angebote. Mehrere Studien belegen, dass "schlechte" Services - unverständliche Formulare, fehlende Unterlagen, auch verärgerte und frustrierte Bürger:innen - personelle und materielle Ressourcen binden und damit Mehrkosten erzeugen. Auf die Nutzer:innen abgestimmte Angebote reduzieren dagegen den Stress für Mitarbeiter:innen der Verwaltung und bringen sie in die Position, hilfreiche Gestalter:innen und nicht "nur" Verwalter:innen sein zu müssen.
 
 Nutzer:innenorientierung wird über methodische Perspektivwechsel, Austausch mit den Nutzer:innen und deren Beobachtung erreicht. Prozesse und Services werden dabei in einzelne Schritte unterteilt, die sich gut im Detail untersuchen und dann auch bearbeiten lassen. Ein Angebot wird ganzheitlich betrachtet, heißt, es beginnt im Moment des ersten Gedanken an eine Verwaltungsleistung: "Wie bekomme ich einen KiTa-Platz für mein Kind?"
