--- a/src/modules/08.md
+++ b/src/modules/08.md
@@ -4,7 +4,7 @@ socialMediaImagePath: /assets/images/modules/08-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 8 “Innovationsprojekte überzeugend präsentieren”
 twitterImagePath: /assets/images/modules/08-social-image-twitter.webp
-abstract: Wir geben Hinweise, die helfen können Innovationsprojekte in der eigenen Abteilung oder im Team oder “nach oben” zu vermitteln und so den Ansatz des agilen und nutzer:innenzentrierten Arbeitens zu streuen.
+abstract: Wir geben Hinweise, die helfen können, Innovationsprojekte in der eigenen Abteilung, im Team oder “nach oben” zu vermitteln und so den Ansatz des agilen und nutzer:innenzentrierten Arbeitens zu streuen.
 example: "Im Service Design Prozess des Zahnärztlichen Dienstes Berlin Neukölln bestand die dankbare Möglichkeit, neue Räume zu beziehen und eine “weiße Wand” bespielen zu dürfen. Ein einfaches Architekturmodell und farbige Ausdrucke möglicher Wandbemalungen (es ist eine Dienstleistung für Kinder) half der Umsetzung auf die Sprünge: Das Modell wurde dem Bezirksamt Neukölln gegeben und bis zum Stadtrat “weitergereicht”, der begeistert seine finanzielle Unterstützung zusagte."
 hero_image_alt: Zwei Personen sprechen vor einer Menschenmenge, abstrakte Glühbirnen leuchten auf
 further_reading:
@@ -23,4 +23,4 @@ Es kann helfen, mobile (physische) Objekte zu entwickeln (ein kleines Heft oder 
 Sammeln Sie Feedback! Der Begriff Nutzer:innentests klingt sehr groß, meint aber im Kern jede mögliche Stimme eines Nutzers (auch eines verwaltungsinternen), die eingeholt werden kann. Jede Person, die ein konstruktives Feedback zum gefundenen Ansatz oder Service machen konnte, die eine Journey durchlief oder auch nur das Shadowing einer einzigen Person ist mehr Feedback als kein Feedback - und daher wertvoll. 
 
 **Inspirieren Sie!**
-Neben guten Ergebnissen und effektiven Methoden hat nutzer:innenorientiertes, co-kreatives und agiles Arbeiten den Vorteil, das es Spaß macht. Teilen Sie Ihre Freude und laden Sie so andere ein, Neues zu wagen.
+Neben guten Ergebnissen und effektiven Methoden hat nutzer:innenorientiertes, co-kreatives und agiles Arbeiten den Vorteil, dass es Spaß macht. Teilen Sie Ihre Freude und laden Sie so andere ein, Neues zu wagen.
